<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_web"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_worker"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_worker" />
        <item
            android:id="@+id/nav_accelerometer"
            android:title="@string/menu_accelerometer" />
        <item
            android:id="@+id/nav_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_micro"
            android:title="@string/menu_micro" />
        <item
            android:id="@+id/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/workWithFiles"
            android:title="@string/menu_files" />

    </group>
</menu>